--- a/genai-usecases/prompt-engineering/zero_shot_chain_of_thought.ipynb
+++ b/genai-usecases/prompt-engineering/zero_shot_chain_of_thought.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Y2eqHW0TK87s"
+      },
       "source": [
         "<a href=\"https://colab.research.google.com/drive/155vRTkn8rB12iSgaoay8pUJxvWzFtCoo?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"></a>\n",
         "\n",
@@ -40,16 +29,11 @@
         "* 📝 **Example prompt:** \"Let's solve this problem step-by-step: [insert problem]\"\n",
         "\n",
         "* 📈 **Effectiveness:** Can significantly improve performance on complex tasks compared to direct questioning."
-      ],
-      "metadata": {
-        "id": "Y2eqHW0TK87s"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -q -U langchain-groq==0.2.4"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -57,58 +41,58 @@
         "id": "XNrPX8MZJm9e",
         "outputId": "24857b5b-726f-4f31-eadf-2990ca59286d"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/121.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━\u001b[0m \u001b[32m112.6/121.9 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m121.9/121.9 kB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
+      ],
+      "source": [
+        "!pip install -q -U langchain-groq>=0.2.4"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from langchain_groq import ChatGroq\n",
-        "from langchain.prompts import ChatPromptTemplate"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "gOLahJCEJv6_"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from langchain_groq import ChatGroq\n",
+        "from langchain.prompts import ChatPromptTemplate"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import getpass"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "I6qvHWQsJxWq"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import getpass"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "GaoPiWagJyoV"
+      },
       "source": [
         "### 🔑 Provide Groq API Key\n",
         "\n",
         "- [Groq API Key](https://console.groq.com/keys)\n"
-      ],
-      "metadata": {
-        "id": "GaoPiWagJyoV"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -116,7 +100,6 @@
         "id": "f-Ioab8HJ037",
         "outputId": "b190708b-07de-47d5-e492-6f276bff3fc2"
       },
-      "execution_count": 4,
       "outputs": [
         {
           "name": "stdout",
@@ -125,24 +108,32 @@
             "··········\n"
           ]
         }
+      ],
+      "source": [
+        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "llm = ChatGroq(\n",
-        "    model=\"llama3-8b-8192\",\n",
-        "    temperature=0.5\n",
-        ")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "RzCcry2GJ2Z1"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "llm = ChatGroq(\n",
+        "    model=\"llama-3.1-8b-instant\",\n",
+        "    temperature=0.5\n",
+        ")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "RCjbg-xkJ4cY"
+      },
+      "outputs": [],
       "source": [
         "zero_shot_cot_prompt = ChatPromptTemplate.from_messages(\n",
         "    [\n",
@@ -152,20 +143,11 @@
         ")\n",
         "\n",
         "chain = zero_shot_cot_prompt | llm"
-      ],
-      "metadata": {
-        "id": "RCjbg-xkJ4cY"
-      },
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "question =  \"A store has 100 apples. If 20% of the apples are rotten, how many good apples are left?\"\n",
-        "response = chain.invoke({\"input\": question})\n",
-        "print(response.content)"
-      ],
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -173,11 +155,10 @@
         "id": "BliFnvhIJ-66",
         "outputId": "eceb6d5c-7094-421f-f1e2-5ca9301c5938"
       },
-      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Let's break this problem down step by step.\n",
             "\n",
@@ -197,16 +178,35 @@
             "Therefore, there are 80 good apples left.\n"
           ]
         }
+      ],
+      "source": [
+        "question =  \"A store has 100 apples. If 20% of the apples are rotten, how many good apples are left?\"\n",
+        "response = chain.invoke({\"input\": question})\n",
+        "print(response.content)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "YCnIpHUSKWsT"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
