--- a/genai-usecases/prompt-engineering/automatic_prompt_engineer_APE.ipynb
+++ b/genai-usecases/prompt-engineering/automatic_prompt_engineer_APE.ipynb
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -69,7 +69,7 @@
         }
       ],
       "source": [
-        "!pip install -q -U langchain-groq==0.2.4"
+        "!pip install -q -U langchain-groq>=0.2.4"
       ]
     },
     {
@@ -133,14 +133,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "RzCcry2GJ2Z1"
       },
       "outputs": [],
       "source": [
         "llm = ChatGroq(\n",
-        "    model=\"llama3-8b-8192\",\n",
+        "    model=\"llama-3.1-8b-instant\",\n",
         "    temperature=0.5\n",
         ")"
       ]
