--- a/genai-usecases/prompt-engineering/basic_prompt_engineering.ipynb
+++ b/genai-usecases/prompt-engineering/basic_prompt_engineering.ipynb
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -169,7 +169,7 @@
         }
       ],
       "source": [
-        "!pip install -q -U langchain-groq==0.2.4"
+        "!pip install -q -U langchain-groq>=0.2.4"
       ]
     },
     {
@@ -242,14 +242,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "Ye3dDZF0IJzP"
       },
       "outputs": [],
       "source": [
         "llm = ChatGroq(\n",
-        "    model=\"llama3-8b-8192\",\n",
+        "    model=\"llama-3.1-8b-instant\",\n",
         "    temperature=0.5\n",
         ")"
       ]
