--- a/genai-usecases/prompt-engineering/chain_of_thought_CoT.ipynb
+++ b/genai-usecases/prompt-engineering/chain_of_thought_CoT.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Y2eqHW0TK87s"
+      },
       "source": [
         "<a href=\"https://colab.research.google.com/drive/12X88F-fB3znbjFXeiaiRRUwjEccaPwKJ?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"></a>\n",
         "\n",
@@ -61,16 +50,11 @@
         "    [Second reasoning step]\n",
         "    ...\n",
         "    Therefore, the answer is [final conclusion]\""
-      ],
-      "metadata": {
-        "id": "Y2eqHW0TK87s"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -q -U langchain-groq==0.2.4"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -78,11 +62,10 @@
         "id": "HdA6tTuJFqJE",
         "outputId": "8c68c2ae-fe1f-4499-9703-1fd83d62f6a8"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.5 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m161.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m70.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/121.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m121.9/121.9 kB\u001b[0m \u001b[31m10.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
@@ -90,49 +73,50 @@
             "\u001b[?25h"
           ]
         }
+      ],
+      "source": [
+        "!pip install -q -U langchain-groq==0.2.4"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from langchain_groq import ChatGroq\n",
-        "from langchain.prompts import ChatPromptTemplate"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "AmIOUVIYFtyv"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from langchain_groq import ChatGroq\n",
+        "from langchain.prompts import ChatPromptTemplate"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import getpass"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "FrOmezftFvKV"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import getpass"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "iQWqqE4yFzI6"
+      },
       "source": [
         "### 🔑 Provide Groq API Key\n",
         "\n",
         "- [Groq API Key](https://console.groq.com/keys)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "iQWqqE4yFzI6"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -140,7 +124,6 @@
         "id": "LpLrpK4fFxJo",
         "outputId": "7f63ae06-4f4e-450c-b568-dd574ccc1faa"
       },
-      "execution_count": 5,
       "outputs": [
         {
           "name": "stdout",
@@ -149,24 +132,32 @@
             "··········\n"
           ]
         }
+      ],
+      "source": [
+        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "llm = ChatGroq(\n",
-        "    model=\"llama3-8b-8192\",\n",
-        "    temperature=0.5\n",
-        ")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "cS9NKyj6F1Xw"
       },
-      "execution_count": 6,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "llm = ChatGroq(\n",
+        "    model=\"llama-3.1-8b-instant\",\n",
+        "    temperature=0.5\n",
+        ")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "25hS_dn3F3UO"
+      },
+      "outputs": [],
       "source": [
         "cot_prompt = ChatPromptTemplate.from_messages(\n",
         "    [\n",
@@ -176,20 +167,11 @@
         ")\n",
         "\n",
         "chain = cot_prompt | llm"
-      ],
-      "metadata": {
-        "id": "25hS_dn3F3UO"
-      },
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "question =  \"If a train travels 120 km in 2 hours, what is its average speed in km/h?\"\n",
-        "response = chain.invoke({\"input\": question})\n",
-        "print(response.content)"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -197,11 +179,10 @@
         "id": "F4GCBhpyGSyR",
         "outputId": "5e5e14dd-1679-49a7-adaa-4a2e7e6b6b77"
       },
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "I'd be happy to help you solve this problem step by step.\n",
             "\n",
@@ -232,16 +213,35 @@
             "That's it! We've solved the problem step by step.\n"
           ]
         }
+      ],
+      "source": [
+        "question =  \"If a train travels 120 km in 2 hours, what is its average speed in km/h?\"\n",
+        "response = chain.invoke({\"input\": question})\n",
+        "print(response.content)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "atlO2HLrGiCt"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
