--- a/genai-usecases/prompt-engineering/graph_prompting.ipynb
+++ b/genai-usecases/prompt-engineering/graph_prompting.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Y2eqHW0TK87s"
+      },
       "source": [
         "<a href=\"https://colab.research.google.com/drive/1PA36flCkfyHWxiP4IJtZeJk-Bv24cKqN?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"></a>\n",
         "\n",
@@ -58,16 +47,11 @@
         "* 🔄 **Variations:**\n",
         "  * Dynamic graph prompting: Adjust the graph structure based on intermediate results\n",
         "  * Hierarchical graph prompting: Use nested graphs for multi-level reasoning"
-      ],
-      "metadata": {
-        "id": "Y2eqHW0TK87s"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -q -U langchain-groq==0.2.4"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -75,59 +59,59 @@
         "id": "KI4D1HL-LKaP",
         "outputId": "a1b858de-2c74-457b-d283-50c09ba6d3f6"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/121.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m121.9/121.9 kB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
+      ],
+      "source": [
+        "!pip install -q -U langchain-groq>=0.2.4"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from langchain_groq import ChatGroq\n",
-        "from langchain.prompts import ChatPromptTemplate"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "dfHHptAFLMwj"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from langchain_groq import ChatGroq\n",
+        "from langchain.prompts import ChatPromptTemplate"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import getpass"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "eZJGDTIMLOnP"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import getpass"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "rQrlkg_bLRZp"
+      },
       "source": [
         "### 🔑 Provide Groq API Key\n",
         "\n",
         "- [Groq API Key](https://console.groq.com/keys)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "rQrlkg_bLRZp"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -135,7 +119,6 @@
         "id": "XI8sLK8uLTht",
         "outputId": "487dfe3b-b8c6-47df-e057-f1e0ee61f326"
       },
-      "execution_count": 4,
       "outputs": [
         {
           "name": "stdout",
@@ -144,24 +127,32 @@
             "··········\n"
           ]
         }
+      ],
+      "source": [
+        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "llm = ChatGroq(\n",
-        "    model=\"llama3-8b-8192\",\n",
-        "    temperature=0.5\n",
-        ")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "0os_AIehLVh1"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "llm = ChatGroq(\n",
+        "    model=\"llama-3.1-8b-instant\",\n",
+        "    temperature=0.5\n",
+        ")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "FToKQB7jLBYD"
+      },
+      "outputs": [],
       "source": [
         "graph_prompt = ChatPromptTemplate.from_messages(\n",
         "    [\n",
@@ -180,20 +171,11 @@
         ")\n",
         "\n",
         "chain = graph_prompt | llm"
-      ],
-      "metadata": {
-        "id": "FToKQB7jLBYD"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "problem =  \"What is the nickname of the neighboring planet to Earth?\"\n",
-        "response = chain.invoke({\"input\": problem})\n",
-        "print(response.content)"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -201,11 +183,10 @@
         "id": "0PWEvnMyLZSb",
         "outputId": "0e7106d2-1828-475f-8d2d-5dc780eb6634"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "I can reason over this graph structure!\n",
             "\n",
@@ -214,16 +195,35 @@
             "So, the answer to the question \"What is the nickname of the neighboring planet to Earth?\" is \"Red Planet\".\n"
           ]
         }
+      ],
+      "source": [
+        "problem =  \"What is the nickname of the neighboring planet to Earth?\"\n",
+        "response = chain.invoke({\"input\": problem})\n",
+        "print(response.content)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "ja7ZCUY2MJT2"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
