--- a/genai-usecases/prompt-engineering/hypothetical_document_embeddings_HyDE.ipynb
+++ b/genai-usecases/prompt-engineering/hypothetical_document_embeddings_HyDE.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Y2eqHW0TK87s"
+      },
       "source": [
         "<a href=\"https://colab.research.google.com/drive/1AjVNW6ZZCOiFvnqek9KEOOxMGrMh0dUO?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"></a>\n",
         "\n",
@@ -52,16 +41,11 @@
         "  * Iterative HyDE: Refine hypothetical documents based on retrieved results\n",
         "\n",
         "* ✔️ **Effectiveness:** Often outperforms traditional keyword-based retrieval methods."
-      ],
-      "metadata": {
-        "id": "Y2eqHW0TK87s"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -q -U langchain-groq==0.2.4"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -69,59 +53,59 @@
         "id": "KI4D1HL-LKaP",
         "outputId": "393e30bd-ee7c-4438-8c1e-5d9885a3b9ef"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/121.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━\u001b[0m \u001b[32m112.6/121.9 kB\u001b[0m \u001b[31m6.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m121.9/121.9 kB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
+      ],
+      "source": [
+        "!pip install -q -U langchain-groq>=0.2.4"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from langchain_groq import ChatGroq\n",
-        "from langchain.prompts import ChatPromptTemplate"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "dfHHptAFLMwj"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from langchain_groq import ChatGroq\n",
+        "from langchain.prompts import ChatPromptTemplate"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import getpass"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "eZJGDTIMLOnP"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import getpass"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "rQrlkg_bLRZp"
+      },
       "source": [
         "### 🔑 Provide Groq API Key\n",
         "\n",
         "- [Groq API Key](https://console.groq.com/keys)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "rQrlkg_bLRZp"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -129,7 +113,6 @@
         "id": "XI8sLK8uLTht",
         "outputId": "9f1e51e5-181c-46c2-d1f5-97f1889c4cab"
       },
-      "execution_count": 4,
       "outputs": [
         {
           "name": "stdout",
@@ -138,24 +121,32 @@
             "··········\n"
           ]
         }
+      ],
+      "source": [
+        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "llm = ChatGroq(\n",
-        "    model=\"llama3-8b-8192\",\n",
-        "    temperature=0.5\n",
-        ")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "0os_AIehLVh1"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "llm = ChatGroq(\n",
+        "    model=\"llama-3.1-8b-instant\",\n",
+        "    temperature=0.5\n",
+        ")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "FToKQB7jLBYD"
+      },
+      "outputs": [],
       "source": [
         "hyde_prompt = ChatPromptTemplate.from_messages(\n",
         "    [\n",
@@ -173,20 +164,11 @@
         ")\n",
         "\n",
         "chain = hyde_prompt | llm"
-      ],
-      "metadata": {
-        "id": "FToKQB7jLBYD"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "problem =  \"how to use multi-modal models in a chain and turn chain into a rest api?\"\n",
-        "response = chain.invoke({\"input\": problem})\n",
-        "print(response.content)"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -194,11 +176,10 @@
         "id": "0PWEvnMyLZSb",
         "outputId": "62d451de-b7dc-495e-9f76-88c3dd34d0c0"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Using multi-modal models in a LangChain and turning it into a REST API is a powerful way to build LLM-powered applications. Here's a step-by-step guide to help you achieve this.\n",
             "\n",
@@ -274,16 +255,35 @@
             "That's it! You've successfully integrated multi-modal models in LangChain and turned it into a REST API using LangServe. You can now use the REST API to build a wide range of LLM-powered applications.\n"
           ]
         }
+      ],
+      "source": [
+        "problem =  \"how to use multi-modal models in a chain and turn chain into a rest api?\"\n",
+        "response = chain.invoke({\"input\": problem})\n",
+        "print(response.content)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "ja7ZCUY2MJT2"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
