--- a/genai-usecases/prompt-engineering/tree_of_thoughts_ToT.ipynb
+++ b/genai-usecases/prompt-engineering/tree_of_thoughts_ToT.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Y2eqHW0TK87s"
+      },
       "source": [
         "<a href=\"https://colab.research.google.com/drive/1P4ue133ZB5OEj8blmkyTLdmz4OiPF8DA?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"></a>\n",
         "\n",
@@ -49,16 +38,11 @@
         "  * Search algorithm (e.g., breadth-first, depth-first)\n",
         "\n",
         "* ⚖️**Challenges:** Balancing exploration breadth with computational efficiency."
-      ],
-      "metadata": {
-        "id": "Y2eqHW0TK87s"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -q -U langchain-groq==0.2.4"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -66,59 +50,59 @@
         "id": "KI4D1HL-LKaP",
         "outputId": "fe1b67d8-d663-4983-e135-3a79d61c9f88"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/121.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m121.9/121.9 kB\u001b[0m \u001b[31m7.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
+      ],
+      "source": [
+        "!pip install -q -U langchain-groq>=0.2.4"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from langchain_groq import ChatGroq\n",
-        "from langchain.prompts import ChatPromptTemplate"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "dfHHptAFLMwj"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from langchain_groq import ChatGroq\n",
+        "from langchain.prompts import ChatPromptTemplate"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "import getpass"
-      ],
+      "execution_count": 3,
       "metadata": {
         "id": "eZJGDTIMLOnP"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import getpass"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "rQrlkg_bLRZp"
+      },
       "source": [
         "### 🔑 Provide Groq API Key\n",
         "\n",
         "- [Groq API Key](https://console.groq.com/keys)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "rQrlkg_bLRZp"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -126,7 +110,6 @@
         "id": "XI8sLK8uLTht",
         "outputId": "921e9c0e-63e9-4f13-e5ec-f3dce29cd8f0"
       },
-      "execution_count": 4,
       "outputs": [
         {
           "name": "stdout",
@@ -135,24 +118,32 @@
             "··········\n"
           ]
         }
+      ],
+      "source": [
+        "os.environ[\"GROQ_API_KEY\"] = getpass.getpass()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "llm = ChatGroq(\n",
-        "    model=\"llama3-8b-8192\",\n",
-        "    temperature=0.5\n",
-        ")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "0os_AIehLVh1"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "llm = ChatGroq(\n",
+        "    model=\"llama-3.1-8b-instant\",\n",
+        "    temperature=0.5\n",
+        ")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "FToKQB7jLBYD"
+      },
+      "outputs": [],
       "source": [
         "tot_prompt = ChatPromptTemplate.from_messages(\n",
         "    [\n",
@@ -180,20 +171,11 @@
         ")\n",
         "\n",
         "chain = tot_prompt | llm"
-      ],
-      "metadata": {
-        "id": "FToKQB7jLBYD"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "problem =  \"Design a sustainable urban transportation system for a city of 1 million people.\"\n",
-        "response = chain.invoke({\"input\": problem})\n",
-        "print(response.content)"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -201,11 +183,10 @@
         "id": "0PWEvnMyLZSb",
         "outputId": "c4f41bae-21ce-4d9f-f246-79a5bc843589"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Here are three different approaches for designing a sustainable urban transportation system for a city of 1 million people:\n",
             "\n",
@@ -273,16 +254,35 @@
             "7. Monitor and evaluate the effectiveness of the public transportation system and make adjustments as needed.\n"
           ]
         }
+      ],
+      "source": [
+        "problem =  \"Design a sustainable urban transportation system for a city of 1 million people.\"\n",
+        "response = chain.invoke({\"input\": problem})\n",
+        "print(response.content)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "ja7ZCUY2MJT2"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
